<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="result">=</string>
    <string name="del">del</string>
    <string name="division">&#247;</string>
    <string name="multiplication">&#215;</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="factorial">!</string>
    <string name="plus_minus">+/-</string>
    <string name="exponent">exp</string>
    <string name="involution">y^x</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="root">&#8730;</string>
</resources>
