<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    >

    <!-- Область контента, текст в ней -->
    <FrameLayout
        android:id="@android:id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewMain"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1DE9B6">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/material_grey_800">
                    <TableRow>
                        <Button
                            android:id="@+id/buttonSeven"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/seven"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5"
                            />
                        <Button
                            android:id="@+id/buttonEight"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/eight"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                        <Button
                            android:id="@+id/buttonNine"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/nine"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/buttonFour"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/four"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                        <Button
                            android:id="@+id/buttonFive"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/five"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                        <Button
                            android:id="@+id/buttonSix"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/six"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/buttonOne"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/one"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                        <Button
                            android:id="@+id/buttonTwo"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/two"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                        <Button
                            android:id="@+id/buttonThree"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/three"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/buttonPoint"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/point"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                        <Button
                            android:id="@+id/buttonZero"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/zero"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                        <Button
                            android:id="@+id/buttonResult"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/result"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                    </TableRow>

                </TableLayout>
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/material_grey_600">
                    <TableRow>
                        <Button
                            android:id="@+id/buttonDel"
                            android:layout_width="71dp"
                            android:layout_height="71dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/del"
                            android:textSize="20sp"
                            android:textColor="#F5F5F5"
                            />
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/buttonSplit"
                            android:layout_width="71dp"
                            android:layout_height="71dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/split"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/buttonMultiple"
                            android:layout_width="71dp"
                            android:layout_height="71dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/multiple"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/buttonMinus"
                            android:layout_width="71dp"
                            android:layout_height="71dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/minus"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/buttonPlus"
                            android:layout_width="71dp"
                            android:layout_height="71dp"
                            android:background="@drawable/round_button_gray_shadow"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/plus"
                            android:textSize="30sp"
                            android:textColor="#F5F5F5" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- Меню drawer-а -->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/additionalOperationsLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp">
        </LinearLayout>

        <TableLayout
            android:id="@+id/additionalOperationsTable"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:background="#1DE9B6">

            <TableRow
                android:gravity="center">
                <Button
                    android:id="@+id/buttonSin"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sin"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
                <Button
                    android:id="@+id/buttonCos"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/cos"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
                <Button
                    android:id="@+id/buttonTan"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tan"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
            </TableRow>
            <TableRow
                android:gravity="center">
                <Button
                    android:id="@+id/buttonLn"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/ln"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
                <Button
                    android:id="@+id/buttonLog"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/log"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
                <Button
                    android:id="@+id/buttonFactorial"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/factorial"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
            </TableRow>
            <TableRow
                android:gravity="center">
                <Button
                    android:id="@+id/buttonPi"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/pi"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
                <Button
                    android:id="@+id/buttonExponent"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/exponent"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
                <Button
                    android:id="@+id/buttonInvolution"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/involution"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
            </TableRow>
            <TableRow
                android:gravity="center">
                <Button
                    android:id="@+id/buttonOpenBracket"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/open_bracket"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
                <Button
                    android:id="@+id/buttonCloseBracket"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/close_bracket"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
                <Button
                    android:id="@+id/buttonRoot"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button_green_shadow"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/root"
                    android:textSize="20sp"
                    android:textColor="@color/material_grey_800"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>